Fixes nav height when aligning it.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -349,6 +349,7 @@ body {
    =============================== */
 
 .widget.extendednavigation {
+	float: left;
     max-width: 100%;
     min-height: 40px;
 	width: 100%;
